# ben-archive

./: .gitignore  Cargo.toml  README.md
crates/bee/: BEEDME.md  Cargo.toml
crates/bee-keeper/: Cargo.toml
crates/bee/src/: certificate.rs  cli.rs  handshake.rs  main.rs  narrative.rs  transport.rs
crates/ben-agent/: Cargo.toml
crates/ben-detectors/: Cargo.toml
crates/ben-harness/: Cargo.toml
crates/ben-ledger/: Cargo.toml
crates/ben-orchestrator/: Cargo.toml
crates/ben-proxy/: Cargo.toml
crates/ben-routines/: Cargo.toml
crates/ben-routines/src/: main.rs
crates/ben-routines/src/schema/: schema.rs
crates/ben-sidecar/: Cargo.toml
crates/ben-spine/: Cargo.toml
crates/ben-store-access/: Cargo.toml
crates/ben_agent/: Cargo.toml
crates/ben_api/: Cargo.toml
crates/ben_contracts/: Cargo.toml
crates/ben_contracts/src/: ben_enum_desc.rs  blot.rs  enum_info.rs  enums.rs  lib.rs  lucius.rs  rules.rs  schema.rs
crates/ben_core/: Cargo.toml
crates/ben_db/: Cargo.toml
crates/ben_db/src/: binary.rs  config.rs  ddl.rs  error.rs  http.rs  lib.rs
crates/ben_fuzz/: Cargo.toml
crates/ben_fuzz/src/: lib.rs
crates/ben_macros/: Cargo.toml
crates/ben_macros/src/: ben_enum.rs  lib.rs
crates/ben_macros/src/bitspec/: data_objs.rs  dsl.rs  helpers.rs  mod.rs
crates/ben_macros/src/blot/: mod.rs
crates/ben_macros/src/declaratives/: specs.rs
crates/ben_macros/src/lucius/: mod.rs
crates/ben_macros/src/schema/: encoding.rs  helpers.rs  mod.rs  render.rs  validate.rs
crates/ben_macros/src/utils/: macro_error.rs
crates/ben_macros/tests/: ben_enum_tests.rs  ben_schema_basic.rs  ben_schema_super.rs  bitspec_rowbinary_integration.rs  bitspec_tests.rs  blot_test.rs  bs_engine_super.rs  lusius_tests.rs
crates/ben_policy/: Cargo.toml
crates/ben_utils/: Cargo.toml
crates/ben_utils/src/: cmd.rs
crates/ben_wire/: Cargo.toml
crates/ben_wire/src/: envelope.rs  error.rs  lib.rs  rowbinary.rs  rowpack.rs  schema.rs  serde_bridge.rs  slot.rs  view.rs
crates/ben_wire/tests/: envelope_test.rs  rowbinary_tests.rs  rowpack_test.rs  serde_bridge_test.rs
crates/benctl/: Cargo.toml
crates/benctl/src/: main.rs
crates/bitspec_engine/: Cargo.toml
crates/bitspec_engine/src/: lib.rs  pack.rs  policy.rs  predicate.rs  threshold.rs
crates/blot_engine/: Cargo.toml
crates/blot_engine/src/: lib.rs
crates/bux/: Cargo.toml  Dioxus.toml
crates/data-migrator/: Cargo.toml
crates/lucius-core/: Cargo.toml
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  schema.rs
crates/sandbox/testdata/: cert.pem  key.pem
deploy/: .env  docker-compose.yml
