[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package] # from /Users/alex/dozer-project/ben  (your new repo root)
edition = "2024"
license = "Apache-2.0-or-later"

# [workspace.dependencies]
# anyhow = "1"
# thiserror = "1"
# tracing = "0.1"
# tracing-subscriber = "0.3"
# tokio = { version = "1", features = ["full"] }
# tonic = "0.12"
# prost = "0.13"
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# zstd = "0.13"
# opentelemetry = "0.22"
# time = "0.3.44"
# uuid = "1.18.1"
