[package]
name = "bee"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
] }
anyhow = "1.0.100"


[target.'cfg(unix)'.dependencies]
tokio = { version = "1.48.0", features = ["net"] }
