[package]
name = "ben_db"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false
bench = false

[dependencies]
url = "2.5.7"
reqwest = { version = "0.12.24", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
serde_json = "1.0.145"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.17"
ben_contracts = { path = "../ben_contracts" } # for BenSchema manifests
ben_wire = { path = "../ben_wire" }
